# MyExten_IBAMR

./: README.md  VALIDATION_FRAMEWORK_SUMMARY.md
.github/workflows/: ci-ibamr.yml
IBAMR-0.18.0/doc/: git.md
IBAMR-0.18.0/examples/IB/explicit/ex7/: example.cpp
IBAMR-0.18.0/examples/vinod/examples/Effect-of-shape-and-adaptive-kinematics/: example.cpp
IBAMR-0.18.0/examples/vinod/examples/Four_fish_school/: example.cpp
IBAMR-0.18.0/examples/vinod/examples/Naca0012carangiform/: example.cpp
IBAMR-0.18.0/ibtk/include/ibtk/: IBTK_MPI.h
IBAMR-0.18.0/tests/IBTK/: laplace_01_2d.duplicated_vector.input
IBAMR-understand-ibamr-code/examples/adv_diff/ex8/: input2d
IBAMR-understand-ibamr-code/tests/: Makefile.in
IBAMR_Validation_Framework/: .gitignore  HOW_TO_RUN_VALIDATION_IN_WSL.md  README.md  VALIDATION_FRAMEWORK_README.md  analyze_results.py  quick_start.sh
IBAMR_Validation_Framework/validation_framework/analysis/: __init__.py  convergence.py  error_metrics.py  field_analysis.py  mass_conservation.py
IBAMR_Validation_Framework/validation_framework/plotting/: __init__.py  comparison_plots.py  error_plots.py  field_plots.py
IBAMR_Validation_Framework/validation_framework/reporting/: __init__.py  report_generator.py
ScalarTransport_TestSuite_Standalone/: .gitignore  CMakeLists.txt  STANDALONE_README.md  run_all_tests.py  run_all_tests.sh
ScalarTransport_TestSuite_Standalone/common/: CMakeLists.txt
ScalarTransport_TestSuite_Standalone/validation_framework/: README.md
ScalarTransport_TestSuite_Standalone/validation_framework/plotting/: convergence_plots.py
patches/: README.md  ibsamrai2-gcc11-hdfdatabasefactory.patch  ibsamrai2-hdfdatabase-include.patch
